# gmgPY

./: README.md  gmg.py  setup.cfg
src/gmg_MCKAYCR.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_basic.py
