[metadata]
name = gmg-MCKAYCR
version = 0.0.1
author = Christopher McKay
author_email = mckaycr@gmail.com
description = Middleware for talking to your Green Mountain Grill
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mckaycr/gmgPY
project_urls =
    Bug Tracker = https://github.com/mckaycr/gmgPY/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src